Tue Aug 25 17:07:05 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (zh_CN_name, zh_TW_name): Add alternative
	  translation "名字", seen in testprns(1).

Tue Aug 25 17:05:51 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/man-1: Restrict manpath to test directories.

Tue Aug 25 10:30:58 BST 2009  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Add .bzrignore,
	  gnulib/lib/xmalloc.c.orig, gnulib/m4/intldir.m4,
	  gnulib/m4/sockpfaf.m4, and release.sh, for consistency between
	  revision control and the distribution.

Tue Aug 25 09:48:39 BST 2009  Colin Watson  <cjwatson@debian.org>

	* po/POTFILES.in: Remove src/wrapper.c.

Sun Aug 23 15:49:45 BST 2009  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (command_dup): Fix newcmd->nenv assertion.

Sun Aug 23 15:41:32 BST 2009  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (command_dup, command_setenv): cmd->env does not
	  need to be { NULL, NULL }-terminated.

Sun Aug 23 11:25:50 BST 2009  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Distribute gnulib/m4/gnulib-tool.m4.

Sun Aug 23 11:21:40 BST 2009  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Distribute gnulib/lib/xmalloc.patch.

Sun Aug 23 11:15:53 BST 2009  Colin Watson  <cjwatson@debian.org>

	* docs/man-db.lsm (Keywords): Add accessdb and lexgrog.

Sun Aug 23 11:14:04 BST 2009  Colin Watson  <cjwatson@debian.org>

	* docs/INSTALL.autoconf: Update to instructions from Autoconf 2.64.

Sun Aug 23 11:11:02 BST 2009  Colin Watson  <cjwatson@debian.org>

	* m4/man-bdb.m4: Bump serial, forgotten in most recent change.

Sun Aug 23 11:07:26 BST 2009  Colin Watson  <cjwatson@debian.org>

	* lib/README: Update.

Sun Aug 23 10:56:50 BST 2009  Colin Watson  <cjwatson@debian.org>

	* docs/TODO: Remove entry about the other 'man' package; 'man -K'
	  was the last major missing feature relative to it.
	* docs/HACKING (Testing): Document new test suite.
